# data-mining-project

./: .gitignore  count-rows.py  delete-all.py  docker-compose.yml  load-data.ipynb  optimal-compression-level.ipynb  overview.ipynb  push-bucket.py  pyproject.toml  schema.ipynb
data-processing/data-overview/: .scalafmt.conf  build.sbt
data-processing/data-overview/src/main/scala/: Main.scala
data-processing/filter-by-authors/: build.sbt
data-processing/filter-by-authors/src/main/scala/: Main.scala
data-processing/preprocessng/: .gitignore  build.sbt
data-processing/preprocessng/src/main/scala/: Main.scala
data-processing/select-authorships/: build.sbt
data-processing/select-authorships/src/main/scala/: Main.scala
distributed/: distributed-client.py  distributed-server.py  docker-compose.yml
ml/: data-mining-teams-prediction.ipynb  inference_example.ipynb
ml/contrastive-model/: test.ipynb  train.py
ml/feature extraction/: concepts.ipynb  edges.ipynb  nodes.ipynb
openalex-snapshot/: extractor.py  fields.yaml
